# demo-python-flask

./: .gitignore  Dockerfile  README.md  TEST_RESULTS.md  VULNERABILITY_REPORT.md  app.py  conftest.py  docker-compose.yml  ghas-results.sarif  poc_xss.py  pyproject.toml  requirements.txt
models/: __init__.py  analytics.py  post.py
modules/: __init__.py  audit_logger.py  backup.py  cache.py  cache_manager.py  comment_parser.py  content_renderer.py  data_cache.py  data_importer.py  email_notifier.py  export_utils.py  file_manager.py  file_reader.py  hash_utils.py  html_renderer.py  http_client.py  image_processor.py  ldap_auth.py  metrics.py  rss_parser.py  search.py  sitemap_gen.py  system_commands.py  tag_manager.py  xml_query.py  yaml_parser.py
routes/: __init__.py  admin.py  api.py  blog.py  documents.py  fileops.py
templates/: admin.html  base.html  index.html  login.html  post.html  search.html  user.html
tests/: __init__.py  test_admin_routes.py  test_api.py  test_blog_routes.py  test_deserialization.py  test_false_positives.py  test_modules.py  test_path_traversal.py
